--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -17,8 +17,8 @@
 				<td><%= user.last_name %></td>
 				<td><%= user.email %></td>
 				<td><%= link_to_modal 'Show', user_path(user) %></td>
-				<td><%= link_to_modal 'Edit', edit_user_path(user) %></td></td>
-				<td><%= link_to 'delete', user_path(user), method: :delete,  data: { confirm: 'You sure?' } %></td>
+				<td><%= link_to_modal 'Edit', edit_user_path(user) %></td>
+				<td><%= link_to 'Delete', user_path(user), method: :delete,  data: { confirm: 'You sure?' } %></td>
     		</tr>
 		<% end %>
 	</tbody>
