--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,4 @@
-<p><%= link_to_modal 'Add New User', new_user_path %></p>
+<p><%= link_to 'Add New User', new_user_path, :remote => true %></p>
 <table>
 	<thead>
     	<tr>
@@ -16,8 +16,8 @@
 				<td><%= user.first_name %></td>
 				<td><%= user.last_name %></td>
 				<td><%= user.email %></td>
-				<td><%= link_to_modal 'Show', user_path(user) %></td>
-				<td><%= link_to_modal 'Edit', edit_user_path(user) %></td>
+				<td><%= link_to 'Show', user_path(user), :remote => true %></td>
+				<td><%= link_to 'Edit', edit_user_path(user), :remote => true %></td>
 				<td><%= link_to 'Delete', user_path(user), method: :delete,  data: { confirm: 'You sure?' } %></td>
     		</tr>
 		<% end %>
