--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,25 +1,26 @@
-<p><%= link_to 'Add New User', new_user_path, :remote => true %></p>
-<table>
-	<thead>
+<h2> Test application Roma Romanenko</h2>
+<table class = 'table'>
+  	<thead>
     	<tr>
-    		<th>First Name</th>
-			<th>Last Name</th>
-			<th>Email</th>
-			<th>Show</th>
-			<th>Edit</th>
-			<th>Destroy</th>  
+      		<th>First Name</th>
+      		<th>Last Name</th>
+      		<th>Email</th>
+      		<th>Show</th>
+      		<th>Edit</th>
+      		<th>Destroy</th>
     	</tr>
-	</thead>
-	<tbody>
+  	</thead>
+  	<tbody>
     	<%- @users.each do |user| %>
-    		<tr>
-				<td><%= user.first_name %></td>
-				<td><%= user.last_name %></td>
-				<td><%= user.email %></td>
-				<td><%= link_to 'Show', user_path(user), :remote => true %></td>
-				<td><%= link_to 'Edit', edit_user_path(user), :remote => true %></td>
-				<td><%= link_to 'Delete', user_path(user), method: :delete,  data: { confirm: 'You sure?' } %></td>
-    		</tr>
-		<% end %>
-	</tbody>
+      		<tr>
+        		<td><%= user.first_name %></td>
+        		<td><%= user.last_name %></td>
+        		<td><%= user.email %></td>
+        		<td><%= link_to 'Show', user_path(user), remote: true %></td>
+        		<td><%= link_to 'Edit', edit_user_path(user), remote: true %></td>
+        		<td><%= link_to 'delete', user_path(user), method: :delete,  data: { confirm: 'You sure?' } %></td>
+      		</tr>
+    	<% end %>
+  	</tbody>
 </table>
+<p><%= link_to 'Add New User', new_user_path, remote: true %></p>
