--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,24 +1,10 @@
 <h2> Test application Roma Romanenko</h2>
-<table class = 'table'>
-  	<thead>
-    	<tr>
-      		<th>First Name</th>
-      		<th>Last Name</th>
-      		<th>Email</th>
-      		<th>Edit</th>
-      		<th>Destroy</th>
-    	</tr>
-  	</thead>
-  	<tbody>
-    	<%- @users.each do |user| %>
-      		<tr>
-        		<td><%= user.first_name %></td>
-        		<td><%= user.last_name %></td>
-        		<td><%= user.email %></td>       		
-        		<td><%= link_to 'Edit', edit_user_path(user), remote: true %></td>
-        		<td><%= link_to 'delete', user_path(user), method: :delete,  data: { confirm: 'You sure?' } %></td>
-      		</tr>
-    	<% end %>
-  	</tbody>
-</table>
-<p><%= link_to 'Add New User', new_user_path, remote: true %></p>
+<%= form_tag users_path, :method => 'get', :id => "users_search" do %>
+  <%= hidden_field_tag :direction, params[:direction] %>
+  <%= hidden_field_tag :sort, params[:sort] %>
+  <p>
+    <%= text_field_tag :search, params[:search] %>
+    <%= submit_tag "Search", :name => nil %>
+  </p>
+  <div id="users"><%= render 'users' %></div>
+<% end %>
