--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,8 @@
 <h2> Test application Roma Romanenko</h2>
-<%= form_tag users_path, :method => 'get', :id => "users_search" do %>
-  <%= hidden_field_tag :direction, params[:direction] %>
-  <%= hidden_field_tag :sort, params[:sort] %> 
-  <div id="users"><%= render 'users' %></div>
+
+<%= form_tag users_path, method: :get, id: 'users_search' do %> 
+  <div id='users'><%= render 'users' %></div>
 <% end %>
+
+
+<p><%= link_to 'Add New User', new_user_path, remote: true %></p>
