--- a/app/views/users/_users.html.erb
+++ b/app/views/users/_users.html.erb
@@ -1,25 +1,19 @@
 <%= hidden_field_tag :direction, params[:direction] %>
 <%= hidden_field_tag :sort, params[:sort] %>
-<table class = 'table'>
+<table class='table' id='all_users' >
  	<thead>
      	<tr>     			
-       		<th><%= sortable "first_name" %></th>
-       		<th><%= sortable "last_name" %></th>
-       		<th><%= sortable "email" %></th>
-       	<th>Edit</th>
-       	<th>Destroy</th>
+       		<th><%= sortable 'first_name' %></th>
+          <th><%= sortable 'last_name' %></th>
+          <th><%= sortable 'email' %></th>
+       	  <th>Edit</th>
+       	  <th>Destroy</th>
      	</tr>
     </thead>
 
     <tbody>
     	<%- @users.each do |user| %>
-        	<tr>
-		        <td><%= user.first_name %></td>
-		        <td><%= user.last_name %></td>
-		        <td><%= user.email %></td>
-		        <td><%= link_to 'Edit', edit_user_path(user), remote: true %></td>
-		        <td><%= link_to 'delete', user_path(user), method: :delete,  data: { confirm: 'You sure?' } %></td>
-		    </tr>
+        <%= render partial: 'user', locals: { user: user } %>        	
      	<% end %>
     </tbody>
 </table>
