--- a/app/views/users/update.js.erb
+++ b/app/views/users/update.js.erb
@@ -1,6 +1,6 @@
 <% if @user.valid? %>
-  	$.lazybox.close();
- 	window.location.reload();
+  $.lazybox.close();
+  $('#user_<%= @user.id %>').replaceWith("<%= j(render partial: 'user', locals: { user: @user }) %>");
 <% else %>
-  	$.lazybox("<%= j(render partial: 'edit') %>");
+  $.lazybox("<%= j(render partial: 'edit') %>");
 <% end %>
