--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -3,5 +3,9 @@
   <td><%= user.last_name %></td>
   <td><%= user.email %></td>
   <td><%= link_to 'Edit', edit_user_path(user), remote: true %></td>
-  <td><%= link_to 'delete', user_path(user), method: :delete,  data: { confirm: 'You sure?' } %></td>
+  <td> 
+  	<%- unless current_user == user %>
+  		<%= link_to 'delete', user_path(user), method: :delete,  data: { confirm: 'You sure?' } %>
+  	<% end %>
+  </td>
 </tr>
