add drag and drop sorting

--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,11 +1,12 @@
-<tr id = 'user_<%= user.id %>'>
-  <td><%= user.first_name %></td>
-  <td><%= user.last_name %></td>
-  <td><%= user.email %></td>
+<%= content_tag_for :tr, user do %>
+  <td class="handle"><%= user.position %></td>
+  <td class="handle"><%= user.first_name %></td>
+  <td class="handle"><%= user.last_name %></td>
+  <td class="handle"><%= user.email %></td>
   <td><%= link_to 'Edit', edit_user_path(user), remote: true %></td>
   <td> 
   	<%- unless current_user == user %>
   		<%= link_to 'delete', user_path(user), method: :delete,  data: { confirm: 'You sure?' } %>
   	<% end %>
   </td>
-</tr>
+<% end %>
