--- a/app/views/users/users.html.erb
+++ b/app/views/users/users.html.erb
@@ -8,7 +8,7 @@
       <th>Destroy</th>
     </tr>
   </thead>
-  <tbody>
+  <tbody id="users">
     <%- @users.each do |user| %>
       <tr>
         <td><%= user.first_name %></td>
