--- a/app/views/users/_users.html.erb
+++ b/app/views/users/_users.html.erb
@@ -2,7 +2,8 @@
 <%= hidden_field_tag :sort, params[:sort] %>
 <table class='table' id='all_users' >
  	<thead>
-     	<tr>     			
+     	<tr> 
+          <th><%= sortable 'position' %></th>    			
        		<th><%= sortable 'first_name' %></th>
           <th><%= sortable 'last_name' %></th>
           <th><%= sortable 'email' %></th>
@@ -11,9 +12,9 @@
      	</tr>
     </thead>
 
-    <tbody>
-    	<%- @users.each do |user| %>
-        <%= render partial: 'user', locals: { user: user } %>        	
-     	<% end %>
+    <tbody id="sort_users" data-update-url="<%= sort_users_url %>">
+      <%- @users.each do |user| %>
+        <div id='list_users'><%= render partial: 'user', locals: { user: user } %></div>
+      <% end %>
     </tbody>
 </table>
